# wow_retail/wow_api_java/src/main/java/fr/jbwittner/blizzardswagger/wowretailapi/model/ArrayCovenantIndexData.java
@@ -2,7 +2,7 @@
  * Swagger BLIZZARD Api
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document: 0.2.0
+ * The version of the OpenAPI document: 0.2.1
  * Contact: jeanbaptiste.wittner@outlook.com
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -31,41 +31,41 @@ import java.util.List;
  * Array of covenant index
  */
 @ApiModel(description = "Array of covenant index")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2021-08-09T13:36:41.331638+02:00[Europe/Paris]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2021-08-09T14:40:18.750348+02:00[Europe/Paris]")
 public class ArrayCovenantIndexData {
-  public static final String SERIALIZED_NAME_CLASSES = "classes";
-  @SerializedName(SERIALIZED_NAME_CLASSES)
-  private List<IndexData> classes = null;
+  public static final String SERIALIZED_NAME_COVENANTS = "covenants";
+  @SerializedName(SERIALIZED_NAME_COVENANTS)
+  private List<IndexData> covenants = null;
 
 
-  public ArrayCovenantIndexData classes(List<IndexData> classes) {
+  public ArrayCovenantIndexData covenants(List<IndexData> covenants) {
     
-    this.classes = classes;
+    this.covenants = covenants;
     return this;
   }
 
-  public ArrayCovenantIndexData addClassesItem(IndexData classesItem) {
-    if (this.classes == null) {
-      this.classes = new ArrayList<IndexData>();
+  public ArrayCovenantIndexData addCovenantsItem(IndexData covenantsItem) {
+    if (this.covenants == null) {
+      this.covenants = new ArrayList<IndexData>();
     }
-    this.classes.add(classesItem);
+    this.covenants.add(covenantsItem);
     return this;
   }
 
    /**
-   * Get classes
-   * @return classes
+   * Get covenants
+   * @return covenants
   **/
   @javax.annotation.Nullable
   @ApiModelProperty(value = "")
 
-  public List<IndexData> getClasses() {
-    return classes;
+  public List<IndexData> getCovenants() {
+    return covenants;
   }
 
 
-  public void setClasses(List<IndexData> classes) {
-    this.classes = classes;
+  public void setCovenants(List<IndexData> covenants) {
+    this.covenants = covenants;
   }
 
 
@@ -78,19 +78,19 @@ public class ArrayCovenantIndexData {
       return false;
     }
     ArrayCovenantIndexData arrayCovenantIndexData = (ArrayCovenantIndexData) o;
-    return Objects.equals(this.classes, arrayCovenantIndexData.classes);
+    return Objects.equals(this.covenants, arrayCovenantIndexData.covenants);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(classes);
+    return Objects.hash(covenants);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class ArrayCovenantIndexData {\n");
-    sb.append("    classes: ").append(toIndentedString(classes)).append("\n");
+    sb.append("    covenants: ").append(toIndentedString(covenants)).append("\n");
     sb.append("}");
     return sb.toString();
   }
